[package]
name = "bitbar-cron"
version = "2.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[dependencies]
bitbar = "0.5"
itertools = "0.10"
once_cell = "1"
regex = "1"
serde_json = "1"
xdg-basedir = "1"

[dependencies.cron-wrapper]
path = "../cron-wrapper"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.serde]
version = "1"
features = ["derive"]
