[package]
name = "bitbar-cron"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitbar = "0.8"
itertools = "0.10"
once_cell = "1"
regex = "1"
serde_json = "1"
xdg-basedir = "1"

[dependencies.cron-wrapper]
path = "../cron-wrapper"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.serde]
version = "1"
features = ["derive"]
