[package]
name = "bitbar-cron"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
bitbar = { version = "0.10", features = ["base64"] }
cron-wrapper = { path = "../cron-wrapper" }
futures = "0.3.30"
if_chain = "1.0.2"
itertools = "0.14"
lazy-regex = "3.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1.4" }
thiserror = "2"
tokio = { version = "1.39.2", features = ["process"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["serde_json"] }
xdg = "3"
