[package]
name = "cronjob-wrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bytesize = "1"
chrono = "0.4"
systemstat = "0.2"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.cron-wrapper]
path = "../cron-wrapper"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
