[package]
name = "cronjob-wrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bytesize = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cron-wrapper = { path = "../cron-wrapper" }
systemstat = "0.2"
thiserror = "1.0.63"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
