[package]
name = "cronjob-wrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bytesize = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cron-wrapper = { path = "../cron-wrapper" }
systemstat = "0.2"
tokio = { version = "1.48.0", features = ["io-util", "process"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
